MODSHSLIDE-91 #resolve #comment Title and descriptions horizontal alignment

--- a/code/media/mod_jsshackslides/css/jsshackslides.css
+++ b/code/media/mod_jsshackslides/css/jsshackslides.css
@@ -35,6 +35,12 @@
 	-o-flex-grow: 1;
 	flex-grow: 1;
 	position: relative;
+	display: flex;
+}
+.jss-title-description .jss-title > *,
+.jss-title-description .jss-description > * {
+	-ms-align-self: center;
+	align-self: center;
 }
 .jss-title-description .jss-title:before,
 .jss-title-description .jss-description:before {
@@ -79,4 +85,33 @@
 	right: 0;
 	height: 100%;
 }
-
+.jss-image .jss-title-description.jss-alignment-left {
+	text-align: left;
+}
+.jss-image .jss-title-description.jss-alignment-left .jss-title {
+	-webkit-justify-content: flex-start;
+	-moz-justify-content: flex-start;
+	-ms-justify-content: flex-start;
+	-o-justify-content: flex-start;
+	justify-content: flex-start;
+}
+.jss-image .jss-title-description.jss-alignment-right {
+	text-align: right;
+}
+.jss-image .jss-title-description.jss-alignment-right .jss-title {
+	-webkit-justify-content: flex-end;
+	-moz-justify-content: flex-end;
+	-ms-justify-content: flex-end;
+	-o-justify-content: flex-end;
+	justify-content: flex-end;
+}
+.jss-image .jss-title-description.jss-alignment-center {
+	text-align: center;
+}
+.jss-image .jss-title-description.jss-alignment-center .jss-title {
+	-webkit-justify-content: center;
+	-moz-justify-content: center;
+	-ms-justify-content: center;
+	-o-justify-content: center;
+	justify-content: center;
+}
